# IR2120

prac5_niryo/prac5_gazebo_niryo/: nyrio_gazebo.urdf
prac5_niryo/prac5_gazebo_nyrio_config/: .setup_assistant  CMakeLists.txt  package.xml
prac5_niryo/prac5_gazebo_nyrio_config/config/: fake_controllers.yaml  niryo_ned.srdf  ompl_planning.yaml  ros_controllers.yaml
prac5_niryo/prac5_gazebo_nyrio_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  niryo_ned_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  (+5 more)
prac5_panda/: CMakeLists.txt  package.xml
prac5_panda/config/: fake_controllers.yaml  panda.srdf  ros_controllers.yaml
prac5_panda/launch/: default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  ros_controllers.launch  trajectory_execution.launch.xml
prac5_panda/prac5_panda_config/: .setup_assistant
prac5_panda/prac5_panda_config/config/: ompl_planning.yaml
prac5_panda/prac5_panda_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  warehouse.launch
practica5_gazebo/: panda_gazebo.urdf
scripts/: pick-place-01.py
